tests/baselines/reference/parserTypeQuery8.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Types/parserTypeQuery8.ts (4 errors) ====
    var v: typeof A<B>
                   ~
!!! error TS1005: '=' expected.
                      
!!! error TS1109: Expression expected.
                  ~
!!! error TS2304: Cannot find name 'A'.
                    ~
!!! error TS2304: Cannot find name 'B'.